email-server/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
  labels:
    app: postfix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postfix
  template:
    metadata:
      labels:
        app: postfix
    spec:
      containers:
        - name: postfix
          image: boky/postfix:latest
          ports:
            - containerPort: 2525
              name: smtp
          volumeMounts:
            - name: config-volume
              mountPath: /etc/postfix/main.cf
              subPath: main.cf
            - name: work-volume
              mountPath: /etc/postfix/vmailbox
              subPath: vmailbox
            - name: work-volume
              mountPath: /etc/postfix/vmailbox.db
              subPath: vmailbox.db
            - name: mail-storage
              mountPath: /var/mail/vhosts
      volumes:
        - name: config-volume
          configMap:
            name: postfix-config
        - name: work-volume
          emptyDir: {}
        - name: mail-storage
          persistentVolumeClaim:
            claimName: postfix-mail-pvc
