email-server/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postfix-service
spec:
  type: LoadBalancer # Change to NodePort or ClusterIP if running an internal-only relay
  selector:
    app: postfix
  ports:
    - name: smtp
      port: 25
      targetPort: 2525
      protocol: TCP
